[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/GreenShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/SnowPlatform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PlatformSnow.gd" type="Script" id=3]
[ext_resource path="res://scenes/Level2Main.gd" type="Script" id=4]
[ext_resource path="res://assets/pexels-felix-mittermeier-1146134.jpg" type="Texture" id=5]
[ext_resource path="res://scenes/ObjectiveArea.gd" type="Script" id=6]
[ext_resource path="res://assets/Axis Extrabold.otf" type="DynamicFontData" id=7]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 55
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 107, 43.5 )

[node name="Level2" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1023.0
margin_bottom = 533.0
texture = SubResource( 1 )

[node name="Pexels-felix-mittermeier-1146134" type="Sprite" parent="TextureRect"]
position = Vector2( 501, 314.25 )
scale = Vector2( 0.218833, 0.184741 )
texture = ExtResource( 5 )

[node name="GreenShip" parent="." instance=ExtResource( 1 )]
position = Vector2( 903, 183 )
mass = 0.29

[node name="PlatformSnow" type="Node2D" parent="."]
position = Vector2( 6, 5 )
script = ExtResource( 3 )

[node name="SnowPlatform" parent="PlatformSnow" instance=ExtResource( 2 )]
position = Vector2( 943, 458 )

[node name="SnowPlatform2" parent="PlatformSnow" instance=ExtResource( 2 )]
position = Vector2( 871, 458 )

[node name="UserInterface" type="Node" parent="."]

[node name="Retry" type="Label" parent="UserInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = 269.0
margin_right = 511.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 4 )
text = "Press R to Reset"
align = 1

[node name="GOAL" type="Label" parent="UserInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -309.0
margin_right = 114.0
margin_bottom = -243.0
custom_colors/font_color = Color( 1, 0.92549, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "GOAL"
align = 1

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2( 542, 14 )
shape = SubResource( 2 )

[connection signal="body_entered" from="ObjectiveArea" to="." method="_on_ObjectiveArea_body_entered"]
